--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "casper",
+    "name": "casper-raohai",
     "description": "The default personal blogging theme for Ghost. Beautiful, minimal and responsive.",
     "demo": "https://demo.ghost.io",
-    "version": "2.0.0",
+    "version": "3.0.0",
     "engines": {
         "ghost": ">=1.0.0"
     },
